# Mulan_IceHouse_OtherDisplay

./: .bashrc  .env  .gitignore  CMakeLists.txt  README.md  lv_conf.h  non_lvgl_config_backup.md  partitions.csv  sdkconfig.defaults
.cache/clangd/index/: animimg001.c.571F53F516BA52AC.idx  animimg002.c.6652E842DC58519D.idx  animimg003.c.F1AC238BAF86527D.idx  assembly.h.8721D16EC677045E.idx  audio_codec_ctrl_i2c.c.40D17587B35BCA2D.idx  audio_codec_ctrl_if.h.6E28E3425B2EE895.idx  audio_codec_ctrl_spi.c.D3CF7EBD2B50143E.idx  audio_codec_data_i2s.c.E700F57DB20BBE4F.idx  audio_codec_data_if.h.729A563440A2982B.idx  audio_codec_gpio.c.E78BC665D06F7CEA.idx  audio_codec_gpio_if.h.BD062A4D68BCE747.idx  audio_codec_if.h.24333327D7753474.idx  audio_codec_sw_vol.c.0BBAA706041847C6.idx  audio_codec_sw_vol.h.FF93411AAF55CAEC.idx  audio_codec_vol_if.h.9DEE586A6067D328.idx  audio_decode_types.h.F74D49FA0C0435E0.idx  audio_log.h.094FB08C981CB001.idx  audio_mp3.cpp.3DAEC8FE7A248C0D.idx  audio_mp3.h.00255B254DD096A1.idx  audio_player.cpp.F63A4ABBDDF32B28.idx  cJSON.c.E9EBC0D1393F9DA2.idx  (+1358 more)
common_components/esp_cam_sensor/: idf_component.yml
components/esp32_p4_function_ev_board/: CMakeLists.txt  Kconfig  README.md  esp32_p4_function_ev_board.c  idf_component.yml
main/: CMakeLists.txt  hex_utils.c  hex_utils.h  idf_component.yml  lv_conf.h  lv_font_device.c  lv_font_device_24.c  lv_font_dishes_24.bak  lv_font_dishes_24.c  lv_font_mulan_14.c  lv_font_mulan_24.c  main.c  mmap_generate_fonts.h  order_ui.c  order_ui.c.bak  order_ui.h  utf8_validator.c  utf8_validator.h
main/conf/: lv_conf.h
(+12 files in other folders)
